cards were too high, fixed it

--- a/front/src/assets/Card.css
+++ b/front/src/assets/Card.css
@@ -23,8 +23,8 @@
 }
 
 body{
-    width: 100%;
-    height: 100vh;
+  width: 100%;
+  height: 125vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -38,11 +38,11 @@ body{
   min-height: 50rem;
   max-height: 40rem;
   display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-around;
-	align-items: center;
-	align-content: stretch;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  align-content: stretch;
   
   padding-top: 10rem;
   padding-right: 10rem;
